src/test/ui/rfc-2627-raw-dylib/import-name-type-x86-only.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/import-name-type-x86-only.rs:3:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: import name type is only supported on x86
  --> $DIR/import-name-type-x86-only.rs:5:42
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "decorated")]
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

